--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
 .DS_Store
-python/.ipynb_checkpoints/
-python/.vscode/
-python/Untitled.ipynb
-terminal/*
-python/__pycache__/*
-.*
-startDev
-
-
+node_modules
+.sass-cache
