--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "url": "https://github.com/TerryRPatterson/Portfolio/issues"
   },
   "homepage": "https://github.com/TerryRPatterson/Portfolio#readme",
-  "dependencies": {},
+  "dependencies": {
+    "eslint": "^5.10.0",
+    "eslint-config-google": "^0.11.0"
+  },
   "devDependencies": {}
 }
